# arca

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json
.github/workflows/: ci.yml  release.yml
apps/arca-gui/: package.json
apps/arca-gui/src/: main.tsx
apps/arca-gui/src-tauri/: Cargo.toml  tauri.conf.json
apps/arca-gui/src-tauri/capabilities/: main.json
apps/arca-gui/src-tauri/icons/: icon.icns
apps/arca-gui/src-tauri/src/: file_associations.rs  lib.rs  main.rs  menus.rs  operations.rs  startup.rs
apps/arca-gui/src-tauri/windows/: nsis-shell-context.nsh
apps/arca-gui/src/api/: archive-commands.ts  file-associations.ts  file-dialogs.ts
apps/arca-gui/src/components/: address-bar.module.css  address-bar.tsx
apps/arca-gui/src/components/command-bar/: command-bar-sections.tsx  command-bar.module.css  command-bar.tsx  command-button.tsx  index.ts
apps/arca-gui/src/components/entry-workspace/: archive-tree.tsx  entry-table-body.tsx  entry-table-header.tsx  entry-table.tsx  entry-workspace.module.css  entry-workspace.tsx  index.ts
apps/arca-gui/src/components/modals/: archive-modals.tsx  close-blocked-modal.tsx  create-archive-fields.tsx  create-archive-modal.tsx  direct-edit-replace-modal.tsx  index.ts  info-modals.tsx  modals.module.css  overwrite-prompt-modal.tsx  password-prompt-modal.tsx  prompt-modals.tsx  unsaved-changes-modal.tsx
apps/arca-gui/src/hooks/: workflow-ports.ts
apps/arca-gui/src/i18n/: i18n-context.tsx  index.ts  messages.ts
apps/arca-gui/src/models/: workbench-actions.ts  workbench-modal-model.ts
apps/arca-gui/src/settings/: index.ts  settings-context.tsx
apps/arca-gui/src/shared/: archive-validation.ts  command-errors.ts  constants.ts  dom-utils.ts  drop-intents.ts  entry-list-utils.ts  format.ts  path-utils.ts  pending-change-utils.ts  prompt-utils.ts  types.ts  utils.ts
apps/arca-gui/src/styles/: base.css  tokens.css
crates/arca-cli/: Cargo.toml
crates/arca-cli/src/: main.rs
crates/arca-cli/tests/: cli.rs
crates/arca-core/: Cargo.toml
crates/arca-core/src/: error.rs  format.rs  lib.rs  ops.rs  plan.rs  policy.rs
crates/arca-core/tests/: roundtrip.rs
crates/arca-native/: Cargo.toml
crates/arca-native/src/: lib.rs
docs/: backend-spike.md  package-readme.md  platform-test-plan.md  release.md  third-party-licenses.md
docs/adr/: 0001-gui-direct-editing-uses-pending-save.md  0002-tauri-for-archive-manager.md  0003-tauri-command-surface-hardening.md  0004-windows-shell-context-startup-requests.md  0005-gui-operation-registry-and-cancel-requests.md
scripts/: compat-fixtures.sh  gui-smoke.mjs  license-check.mjs  package.ps1  package.sh  smoke.ps1  smoke.sh  source-archive.sh  verify-compat-extract.mjs  verify-release-assets.sh  version-check.mjs
(+82 files in other folders)
