[workspace]
members = [
  "crates/arca-core",
  "crates/arca-cli",
  "crates/arca-native",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "GPL-3.0-or-later"
repository = "https://github.com/crasnec/arca"
rust-version = "1.96"

[workspace.dependencies]
anyhow = "1.0.100"
bzip2 = "0.6.1"
clap = { version = "4.6.1", features = ["derive", "wrap_help"] }
filetime = "0.2.26"
flate2 = "1.1.9"
globset = "0.4.18"
rpassword = "7.5.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
tar = { version = "0.4.46", default-features = false }
tempfile = "3.23.0"
thiserror = "2.0.17"
unicode-normalization = "0.1.25"
walkdir = "2.5.0"
xz2 = "0.1.7"
zeroize = "1.9.0"
zip = { version = "=9.0.0-pre2", default-features = false, features = ["aes-crypto", "deflate-flate2-zlib-rs", "time"] }
