[package]
name = "arca-gui"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
name = "arca_gui_lib"
path = "src/lib.rs"

[[bin]]
name = "arca-gui"
path = "src/main.rs"

[build-dependencies]
tauri-build.workspace = true

[dependencies]
arca-core = { path = "../../../crates/arca-core" }
arca-native = { path = "../../../crates/arca-native" }
percent-encoding.workspace = true
serde.workspace = true
tauri.workspace = true
tauri-plugin-dialog.workspace = true
tauri-plugin-single-instance.workspace = true

[target.'cfg(windows)'.dependencies]
windows-sys.workspace = true
winreg.workspace = true

[dev-dependencies]
serde_json.workspace = true
